[gd_scene load_steps=12 format=3 uid="uid://u0akc3mm7h5w"]

[ext_resource type="Script" path="res://Player/winner.gd" id="1_jod7m"]
[ext_resource type="FontFile" uid="uid://iue6pgsxh4ki" path="res://Assets/Super-Mario-World.ttf" id="2_varfi"]
[ext_resource type="Texture2D" uid="uid://bcsiswm0mp1vj" path="res://Assets/reloj.png" id="3_uw0yq"]
[ext_resource type="Texture2D" uid="uid://d1aarj6dul4ew" path="res://Assets/cross.png" id="4_nupy3"]
[ext_resource type="AudioStream" uid="uid://sv140l1psnwp" path="res://Niveles/complete_level.wav" id="5_wsug4"]
[ext_resource type="PackedScene" uid="uid://75ufrji4qy4v" path="res://Player/hud.tscn" id="6_k7w8t"]

[sub_resource type="LabelSettings" id="LabelSettings_w1xrq"]
font = ExtResource("2_varfi")
font_size = 20
font_color = Color(0.86924, 0.175756, 0.200055, 1)
outline_size = 10
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_p0ksv"]
font = ExtResource("2_varfi")
font_size = 20
outline_size = 10
outline_color = Color(0, 0, 0, 1)

[sub_resource type="Animation" id="Animation_y7537"]
resource_name = "Winner"
length = 10.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/Background:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CanvasLayer/Background/mario:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(2.46667, 2.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CanvasLayer/Background/title:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(2.46667, 2.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("CanvasLayer/Background/numTime:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(2.46667, 2.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("CanvasLayer/Background/Multiplier:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(2.46667, 2.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("CanvasLayer/Background/resultMultiplier:modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(2.46667, 2.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("CanvasLayer/Background/reloj:modulate")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(2.46667, 2.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("CanvasLayer/Background/x:modulate")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(2.46667, 2.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_laxuk"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/Background:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CanvasLayer/Background/mario:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CanvasLayer/Background/title:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("CanvasLayer/Background/numTime:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("CanvasLayer/Background/Multiplier:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("CanvasLayer/Background/resultMultiplier:modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("CanvasLayer/Background/reloj:modulate")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("CanvasLayer/Background/x:modulate")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_syoke"]
_data = {
"RESET": SubResource("Animation_laxuk"),
"Winner": SubResource("Animation_y7537")
}

[node name="Winner" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_jod7m")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Background" type="ColorRect" parent="CanvasLayer"]
modulate = Color(1, 1, 1, 0)
offset_right = 1282.0
offset_bottom = 722.0
color = Color(0.0823529, 0.0823529, 0.0823529, 1)

[node name="mario" type="Label" parent="CanvasLayer/Background"]
modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_left = 589.0
offset_top = 235.0
offset_right = 705.0
offset_bottom = 262.0
scale = Vector2(1.25, 1.25)
text = "MARIO"
label_settings = SubResource("LabelSettings_w1xrq")
horizontal_alignment = 1

[node name="title" type="Label" parent="CanvasLayer/Background"]
modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_left = 533.0
offset_top = 287.0
offset_right = 740.0
offset_bottom = 311.0
scale = Vector2(1.25, 1.25)
text = "COURSE CLEAR"
label_settings = SubResource("LabelSettings_p0ksv")
vertical_alignment = 1

[node name="numTime" type="Label" parent="CanvasLayer/Background"]
modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_left = 524.0
offset_top = 351.0
offset_right = 581.0
offset_bottom = 379.0
scale = Vector2(1.25, 1.25)
text = "000"
label_settings = SubResource("LabelSettings_p0ksv")
vertical_alignment = 1

[node name="Multiplier" type="Label" parent="CanvasLayer/Background"]
modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_left = 625.0
offset_top = 349.0
offset_right = 682.0
offset_bottom = 377.0
scale = Vector2(1.25, 1.25)
text = "50 ="
label_settings = SubResource("LabelSettings_p0ksv")
vertical_alignment = 1

[node name="resultMultiplier" type="Label" parent="CanvasLayer/Background"]
modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_left = 703.0
offset_top = 352.0
offset_right = 795.0
offset_bottom = 380.0
scale = Vector2(1.25, 1.25)
text = "00000"
label_settings = SubResource("LabelSettings_p0ksv")
vertical_alignment = 1

[node name="reloj" type="TextureRect" parent="CanvasLayer/Background"]
modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_left = 497.0
offset_top = 356.0
offset_right = 561.0
offset_bottom = 420.0
scale = Vector2(0.299206, 0.299206)
texture = ExtResource("3_uw0yq")

[node name="x" type="TextureRect" parent="CanvasLayer/Background"]
modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_left = 596.0
offset_top = 356.0
offset_right = 618.0
offset_bottom = 378.0
scale = Vector2(1.00103, 1.00103)
texture = ExtResource("4_nupy3")
stretch_mode = 4

[node name="Timer" type="Timer" parent="."]
wait_time = 0.005

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_syoke")
}

[node name="winnerSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_wsug4")
volume_db = 15.0
autoplay = true

[node name="HUD" parent="." instance=ExtResource("6_k7w8t")]
layout_mode = 1
